k8s-manifests-file/login-page-svc.yaml
apiVersion: v1
kind: Service
metadata: 
  name: login-page
  namespace: login-page
spec:
  ports:
  - port: 8080
    protocol: TCP
  type: ClusterIP
  selector:
    role: login-page
